# django-component-kit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: pre-commit.yml  release.yml  tests.yml
django_component_kit/: __init__.py  apps.py  assets.py  attributes.py  decorators.py  nodes.py  partials.py  tags.py  utils.py
django_component_kit/templatetags/: components.py
tests/: settings.py  test_attributes.py  test_templatetags.py  test_utils.py
